--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
             structure, content, and presentation.
           </p>
         </div>
-        <div class="author">
+        <footer class="author">
           <img
             class="author-img"
             src="./assets/images/image-avatar.webp"
             alt="Photo of Greg Hooper"
           />
           <p class="author-name">Greg Hooper</p>
-        </div>
+        </footer>
       </article>
     </main>
   </body>
